--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,9 @@ title: Pills of Science
 email: giovanni.decesare@inaf.it giulia.stratta@inaf.it ...
 description: >- # this means to ignore newlines until "baseurl:"
   This site report the list of contributions given at the Pills of Science meetings. Maintained by Giovanni De Cesare.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# Uncomment to deploy on github
+baseurl: "/pos" # the subpath of your site, e.g. /blog
+url: "https://giovixo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: giovixo
 
 # Build settings
