--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Pills of Science
-email: giovanni.decesare@inaf.it giulia.stratta@inaf.it ...
+email: giovanni.decesare at inaf.it
+#fabrizio.cogato@inaf.it giovanni.decesare@inaf.it mauro.orlandini@inaf.it andrea.rossi@inaf.it giulia.stratta@inaf.it
 description: >- # this means to ignore newlines until "baseurl:"
   This site report the list of contributions given at the Pills of Science meetings. Maintained by Giovanni De Cesare.
 # Uncomment to deploy on github
